# secure-mcp-boilerplate

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: SECURITY.md
src/: __init__.py  audit.py  auth.py  config.py  rate_limiter.py  server.py
tests/: test_audit.py  test_auth.py  test_config.py  test_rate_limiter.py
