[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-mcp-boilerplate"
version = "0.1.0"
description = "Secure MCP server boilerplate with OAuth 2.1, rate limiting, audit logging"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
full = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "authlib>=1.3.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]
